--- a/util/man/Plugin_store_csv.man
+++ b/util/man/Plugin_store_csv.man
@@ -21,7 +21,7 @@ The store_csv plugin is a CSV store.
 
 .TP
 .BR config
-name=<plugin_name> path=<path> [ alt_header=<altheader> idpos=<idpos> rolltype=<rolltype> rollover=<rollover> ]
+name=<plugin_name> path=<path> [ altheader=<altheader> id_pos=<idpos> rolltype=<rolltype> rollover=<rollover> ]
 .br
 ldmsctl configuration line
 .RS
@@ -34,11 +34,11 @@ path=<path>
 .br
 The output files will be put into a directory whose root is specified by the path argument. This directory must exist; the subdirectories and files will be created. The full path to the output files will be <path>/<comp_type>/<container>. Typically these are chosen to make output files like: XXX/store_csv/node/meminfo. If you choose a rollover option, then the filename will also be postpended by "-" followed by the epochtime e.g., XXX/store_csv/node/meminfo-123456789.
 .TP
-alt_header=<altheader>
+altheader=<altheader>
 .br
-The default output writes the header to the same file as the data file. alt_header=1 will write the header to an alternate file (e.g., if the data file is called "meminfo" the additional header file will be called "meminfo.HEADER"). If you choose a rollover option, the header file name will be postpended with the epochtime, similar to the data file, and a new one will be written at each rollover. Default is alt_header=0.
+The default output writes the header to the same file as the data file. altheader=1 will write the header to an alternate file (e.g., if the data file is called "meminfo" the additional header file will be called "meminfo.HEADER"). If you choose a rollover option, the header file name will be postpended with the epochtime, similar to the data file, and a new one will be written at each rollover. Default is altheader=0.
 .TP
-idpos=<idpos>
+id_pos=<idpos>
 .br
 The default output format in the CSV stores writes out a separate unique identifier along with each data value. In all cases, this is the component_id. We currently recommend the following: assign a unique component_id to each node and use id_pos=1 in the store configuration parameters. This will result in only one unique identifier written out in any line in the output store and that identifier will be the component id.
 .TP
@@ -110,7 +110,7 @@ No known bugs.
 .nf
 $/tmp/opt/ovis/sbin/ldmsctl -S /var/run/ldmsd/metric_socket_vm1_1
 ldmsctl> load name=store_csv
-ldmsctl> config name=store_csv alt_header=1 id_pos=1 path=/XXX/storedir
+ldmsctl> config name=store_csv altheader=1 id_pos=1 path=/XXX/storedir
 ldmsctl> store name=store_csv comp_type=node set=meminfo container=meminfo_store
 ldmsctl> quit
 .fi
