--- a/util/man/ldmsd.man
+++ b/util/man/ldmsd.man
@@ -1,29 +1,31 @@
-.\" Manpage for ldmsd
+.\" Manpage for ldmsd ldms-aggd
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 8 "13 Apr 2015" "v2.4.0" "ldmsd man page"
+.TH man 8 "13 Apr 2015" "v2.4.2" "ldmsd man page"
 
 .SH NAME
 ldmsd \- Start an ldms daemon
 
 .SH SYNOPSIS
 ldmsd [OPTION...]
+ldms-aggd [OPTION...]
 
 .SH DESCRIPTION
 With LDMS (Lightweight Distributed Metric Service), the ldmsd command is used
 to start an ldms daemon. Plugin configuration of the ldmsd can be done via the
-ldmsctl command.
+ldmsctl command. ldms-aggd is an alias of ldmsd (by symbolic link) to allow
+separate process management distinction of data samplers and aggregators.
 
 .SH ENVIRONMENT
 The following environment variables must be set:
 .TP
 LD_LIBRARY_PATH
-include path to ovis/lib64
+include path to ovis/lib64 (or ovis/lib, depending on OS), if not in a system default path
 .TP
 LDMS_XPRT_LIBPATH
-path to ovis/lib64/
+path to ovis/lib64/ovis-ldms
 .TP
 LDMSD_PLUGIN_LIBPATH
-path to ovis/lib64/
+path to ovis/lib64/ovis-ldms
 .TP
 LDMSD_SOCKPATH
 path to the unix domain socket for the ldmsd. Default is /var/run. If you want to change the path (e.g., not running as root and hence /var/run is not writeable), set this variable (e.g., /tmp/run/ldmsd).
@@ -153,6 +155,6 @@ Same but sending stdout and stderr to /dev/null
 
 
 .SH SEE ALSO
-LDMS_Authentication(7), LDMS_QuickStart(7), ldmsctl(1), ldms_ls(1),
+LDMS_Authentication(7), LDMS_QuickStart(7), ldms-genders(7), ldmsctl(1), ldms_ls(1),
 Plugin_cray_system_sampler(7), Plugin_kgnilnd(7), Plugin_lustre2_client(7), Plugin_meminfo(7), Plugin_procnetdev(7), Plugin_procnfs(7),
 Plugin_procsensors(7), Plugin_store_csv(7), Plugin_store_derived_csv(7), Plugin_sysclassib(7), Plugin_procstatutil2(7), Plugin_vmstat(7)
