MAN: ldms(7) index added; crossreference mess out.
Uses pod to generate the man page, which for simple
formatting at least is ok.

--- a/util/man/Plugin_slurmjobid.man
+++ b/util/man/Plugin_slurmjobid.man
@@ -81,6 +81,4 @@ echo $SLURM_JOBID > /var/run/ldms.slurm.jobid
 These slurm files might be found in /etc/nodestate/bin/.
 
 .SH SEE ALSO
-LDMS_Authentication(7), LDMS_QuickStart(7), ldmsctl(1), ldmsd(1), ldms_ls(1),
-Plugin_cray_system_sampler_variants(7), Plugin_kgnilnd(7), Plugin_lustre2_client(7), Plugin_meminfo(7), Plugin_procnetdev(7), Plugin_procnfs(7),
-Plugin_procsensors(7), Plugin_store_csv(7), Plugin_store_derived_csv(7), Plugin_sysclassib(7), Plugin_procstatutil2(7), Plugin_vmstat(7)
+ldms(7)
