--- a/util/man/Plugin_procstatutil2.man
+++ b/util/man/Plugin_procstatutil2.man
@@ -59,6 +59,4 @@ ldmsctl> quit
 .fi
 
 .SH SEE ALSO
-Kernel source fs/proc/stat.c and proc(5), LDMS_Authentication(7), LDMS_QuickStart(7), ldmsctl(1), ldmsd(1), ldms_ls(1),
-Plugin_cray_system_sampler_variants(7), Plugin_kgnilnd(7), Plugin_lustre2_client(7), Plugin_meminfo(7), Plugin_procnetdev(7), Plugin_procnfs(7),
-Plugin_procsensors(7), Plugin_store_csv(7), Plugin_store_derived_csv(7), Plugin_sysclassib(7), Plugin_vmstat(7)
+Kernel source fs/proc/stat.c and proc(5), ldms(7)
