--- a/util/man/ldmsctl.man
+++ b/util/man/ldmsctl.man
@@ -342,6 +342,5 @@ Notes for example 6:
 
 
 .SH SEE ALSO
-LDMS_Authentication(7), LDMS_QuickStart(7), ldmsd(1), ldms_ls(1),
-Plugin_cray_system_sampler_variants(7), Plugin_kgnilnd(7), Plugin_lustre2_client(7), Plugin_meminfo(7), Plugin_procnetdev(7), Plugin_procnfs(7),
-Plugin_procsensors(7), Plugin_store_csv(7), Plugin_store_derived_csv(7), Plugin_sysclassib(7), Plugin_procstatutil2(7), Plugin_vmstat(7)
+LDMS_Authentication(7), ldms(7), ldmsd(1), ldms_ls(1)
+
