Added slurmid option to most samplers; default off.
* Added shared data service for data many plugins need.

* Added some documentation of the very twisted memory
management assumption av list has under the covers.

* Slurm jobid, if enabled by loading the slurmjobid sampler
and configuring the other samplers, is inserted at the front
of the metric sets where configured. Only one sampler actually
collects the slurm jobid (slurmjobid.c); the rest get it from
a singleton registry of shared metrics to avoid
redundant work and redundant coding. The slurmjobid sampler
can run at lower frequency if desired, though this may lead to
a few samples (by others) that have an old value.
The slurmjobid sampler need not be stored if some other set
is storing jobid.

--- a/util/man/Plugin_meminfo.man
+++ b/util/man/Plugin_meminfo.man
@@ -34,6 +34,10 @@ The component id numerical value.
 set=<set_name>
 .br
 The name of the metric set.
+.TP
+with_jobid=<bool>
+.br
+1 to include jobid with set or 0 if not.
 .RE
 
 .SH BUGS
