--- a/util/man/Plugin_lustre2_client.man
+++ b/util/man/Plugin_lustre2_client.man
@@ -18,7 +18,7 @@ The lustre2_client plugin provides Lustre metric information.
 
 .TP
 .BR config
-name=<plugin_name> component_id=<comp_id> set=<set_name> osc=<osc> mcd=<mcd> llite=<llite>
+name=<plugin_name> component_id=<comp_id> set=<set_name> osc=<osc> mcd=<mcd> llite=<llite> with_jobid=<bool>
 .br
 ldmsctl configuration line
 .RS
@@ -34,6 +34,10 @@ The component id numerical value.
 set=<set_name>
 .br
 The name of the metric set.
+.TP 
+with_jobid=<bool>
+.br
+1 to include jobid with set or 0 if not.
 .TP
 osc=<osc>
 .br
