--- a/util/sample_init_scripts/genders/README
+++ b/util/sample_init_scripts/genders/README
@@ -1,22 +1,20 @@
 To test,  copy the etc/ layout here into your /etc or imageroot/etc/
 and then cd to imageroot (or / if no imageroot) and:
 
-Edit /etc/genders to define the LDMS genders describing the
+Clone/Edit /etc/genders.ldms.ataco to define the LDMS genders describing the
 node roles, data collection network usage, metrics collected, and so forth.
+If desired, ldms genders can be kept together with regular genders in /etc/genders.
+This will facilitate starting/stopping data collection with
+	pdsh -g ldmsd service ldmsd start
 
-The plan here is to set up a rhel-like set of init scripts for:
-	$PREFIX/sbin/ldmsd - the sampler service
-	$PREFIX/sbin/ldms-aggd - the aggregation service, a symlink to ldmsd in 1.3
+Edit /etc/sysconfig/ldmsd.conf to specify the correct name of the 
+genders file for your cluster (same gender file content must be visible from
+all nodes) in the LDMS_GENDERS variable.
 
-where each (X=ldms-aggd ldmsd) has:
-	init.d/X service script
-	sysconfig/X service configuration logic using genders data
-	sysconfig/X.conf scalar overrides for almost everything.
-		
-and jointly they use init.d/ldms-functions
+In /etc/sysconfig/ldms-aggd specify the correct directory location for
+STORE_PATH where data will be dumped.
 
-We will need corresponding man pages:
-	X(5)
-	X.conf(5)
-	X(8)	
-
+Edit /etc/sysconfig/ldmsd.conf to specify the correct log path
+LDMSD_LOG_PATH for your installation. 'syslog' will trigger use of syslog
+calls instead of log files. LDMSD_LOG_PATH is also where ldms-aggd will log.
+With debug genders other than ldms[agg]d_dbg=ERROR, the log can get a lot of traffic.
