--- a/util/man/Plugin_cray_system_sampler_variants.man
+++ b/util/man/Plugin_cray_system_sampler_variants.man
@@ -194,7 +194,7 @@ The only difference in output information in the two cases is that currently the
 
 .SH ARIES PERFORMANCE COUNTER INFORMATION
 The aries performance counter information will be accessed via the gpcdr module, if the hsn metrics are turned on.
-.B NOTE: Prior to CLE 5.2 UP05, the default gpcdr configuration erroneously wrote all the aries metrics to the same file within /sys/devices. Due to the number and size of the values, this file would exceed the supported file sizes within /sys. If you have CLE version < 5.2 UP05, replace your gpcdr-init.config file with one that splits up the locations of these values into separate files consistent with how they are handled in CLE 5.2 UP05. This configuration file and instructions for using it can be found in util/aries.
+.B NOTE: Prior to CLE 5.2 UP05, the default gpcdr configuration erroneously wrote all the aries metrics to the same file within /sys/devices. Due to the number and size of the values, this file would exceed the supported file sizes within /sys. If you have CLE version < 5.2 UP05, replace your gpcdr-init.config file with one that splits up the locations of these values into separate files consistent with how they are handled in CLE 5.2 UP05. This configuration file and instructions for using it can be found in util/aries. The plugin will FAIL if you do not have the expected files for the split metrics.
 .br
 
 .SH DATA DIFFERENCES AMONG THE VARIANTS
