Modified msr sampler to support additional northbridge counters

--- a/util/man/Plugin_msr.man
+++ b/util/man/Plugin_msr.man
@@ -64,9 +64,11 @@ TLB_DM
 .IP \[bu]
 L3_CACHE_MISSES - Per numa node
 .IP \[bu]
-L3_CYC_CNT - Per numa node
+DCT_PREFETCH - Per numa node
 .IP \[bu]
-L3_REQ_CNT - Per numa node
+DCT_RD_TOT - Per numa node
+.IP \[bu]
+DCT_WRT - Per numa node
 .PP
 These are the options for the metricname argument of the add command.
 
