--- a/util/man/Plugin_store_derived_csv.man
+++ b/util/man/Plugin_store_derived_csv.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_store_derived_csv
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "13 Jan 2015" "v2.3/RC1.3" "LDMS Plugin store_derived_csv man page"
+.TH man 7 "21 Sep 2015" "v2.5" "LDMS Plugin store_derived_csv man page"
 
 .SH NAME
 Plugin_store_derived_csv - man page for the LDMS store_derived_csv plugin
@@ -115,7 +115,7 @@ Time, Time_usec, DT, DT_usec, [CompId,] <sampled metric >*, Flag
 .RE
 .PP
 where [CompId,] is present if id_pos was specified, Flag is as described for option agesec, and
-where each <sampled metric> is either 
+where each <sampled metric> is either
 .PP
 .RS
 <metric_name>.CompId, <metric_name>
@@ -128,7 +128,7 @@ or if id_pos has been specified just:
 .RE
 .PP
 .PP
-The column sequence of <sampled metrics> is the order in which the metrics are added into the metric set by the derived csv store configuration file. 
+The column sequence of <sampled metrics> is the order in which the metrics are added into the metric set by the derived csv store configuration file.
 .PP
 There is no option to reverse the sampled metric order.
 
@@ -164,6 +164,8 @@ Any metric can only be in the file once.
 If you want to collect on a host and store that data on the same host, run two ldmsd's: one with a collector plugin only and one as an aggegrator
 with a store plugin only.
 
+As of v2.5, if the header fails in any way (e.g., configuration file non-existent) no data will be written out (previously,
+the time data and component id were still written out)
 
 .SH BUGS
 No known bugs.
